--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@ layout: null
 <html>
   <head>
     <meta content='Scribble' property='og:title' />
-    <title>Scribble</title>
+    <title>404 - Not Found</title>
     <link href='{{ site.url }}/images/fav.png' rel='shortcut icon'>
     <link rel="stylesheet" href="{{ site.url }}/stylesheets/style.css"/>
     <meta content='width=device-width, initial-scale=1.0, user-scalable=no' name='viewport'>
@@ -17,7 +17,8 @@ layout: null
   </head>
   <body class="lh-copy dark-gray ph3 pv5 f6 sans-serif tc bg-super-white">
       <img src="{{ site.url }}/images/404.png" alt="not found" width="160" class="mb3" /><br>
-      <a href="{{ site.url }}" class="link blue hover-gray">Home</a>
+      <p>404 - not found!</p>
+      <a href="{{ site.url }}" class="link blue hover-gray">go back home</a>
     </div>
   </body>
 </html>
